--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,8 @@ plugins {
 }
 
 android {
-    namespace 'com.example.tugas6'
     compileSdk 32
-
+    namespace 'com.example.tugas6'
     defaultConfig {
         applicationId "com.example.tugas6"
         minSdk 27
@@ -22,10 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     buildFeatures{
         viewBinding true
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -33,8 +32,8 @@ android {
 }
 
 dependencies {
-
-
+    //noinspection GradleCompatible
+    androidTestImplementation 'com.android.support:design:28.0.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation "androidx.cardview:cardview:1.0.0"
@@ -44,4 +43,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 }
